@@ -262,6 +262,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiEditPage' => 'includes/api/ApiEditPage.php',
 	'ApiEmailUser' => 'includes/api/ApiEmailUser.php',
 	'ApiExpandTemplates' => 'includes/api/ApiExpandTemplates.php',
+	'ApiFeedContributions' => 'includes/api/ApiFeedContributions.php',
 	'ApiFeedWatchlist' => 'includes/api/ApiFeedWatchlist.php',
 	'ApiFileRevert' => 'includes/api/ApiFileRevert.php',
 	'ApiFormatBase' => 'includes/api/ApiFormatBase.php',
